david618/commons_cli (#12)
* Trying commons cli

* Changed everything to use apache commons cli

* Add some short bash commands to simplify running at command line; fix error in HttpSink

* Updated Dockerfiles; corrected params

* Updated Documentation

* Updated README

* Update README.md